--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-modal": "^1.7.2",
     "react-router": "^3.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
